--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
   </style>
 </head>
 <body>
+
   <h1>Welcome to the Proof of Impact Protocol</h1>
   <p>Select a live module below to explore the system in action:</p>
 
   <a href="./stake.html">Stake Simulation</a>
   <a href="./yield.html">Treasury Yield Simulation</a>
   <a href="./bounties/bounty-002.md">View Live Bounty Proof</a>
-  <a href="./Pol_Whitepaper_Full_.pdf" target="_blank">Download Full Whitepaper (PDF)</a>
+  <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper (Google Docs)</a>
+
 </body>
 </html>
