--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
   <a href="./stake.html">Stake Simulation</a>
   <a href="./yield.html">Treasury Yield Simulation</a>
-  <a href="./bounties/bounty-002.md">View Live Bounty Proof</a>
+  <a href="./bounties/bounty-001.md">View Live Bounty Proof #001</a>
+  <a href="./bounties/bounty-002.md">View Live Bounty Proof #002</a>
   <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper (Google Docs)</a>
 
 </body>
