--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
+      max-width: 700px;
       margin: 40px auto;
       padding: 20px;
       background: #f0f4f8;
@@ -16,6 +16,11 @@
     h1 {
       font-size: 26px;
       margin-bottom: 10px;
+    }
+    h2 {
+      font-size: 20px;
+      margin-top: 30px;
+      color: #222;
     }
     p {
       font-size: 16px;
@@ -33,18 +38,39 @@
     a:hover {
       background: #005fa3;
     }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      padding: 4px 0;
+      font-size: 15px;
+      color: #333;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Welcome to the Proof of Impact Protocol</h1>
-  <p>Select a live module below to explore the system in action:</p>
+  <h1>Welcome to the Proof of Impact Protocol (PoIP)</h1>
+  <p>PoIP is a global funding system that turns pooled staking into real-world aid.</p>
+  <p>Stake your funds to grow the PoIP treasury. You’ll get your full stake back and earn $GROW — a symbolic reward for helping the world.</p>
+  <p>All bounties are funded from <strong>treasury yield only</strong>, ensuring transparency and sustainability. The longer you stake, the more $GROW you receive.</p>
 
   <a href="./stake.html">Stake Simulation</a>
   <a href="./yield.html">Treasury Yield Simulation</a>
-  <a href="./bounties/bounty-001.md">View Live Bounty Proof #001</a>
-  <a href="./bounties/bounty-002.md">View Live Bounty Proof #002</a>
+  <a href="./bounties/bounty-001.md">View Bounty Proof #001</a>
+  <a href="./bounties/bounty-002.md">View Bounty Proof #002</a>
   <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper (Google Docs)</a>
+
+  <h2>Treasury Breakdown (Example)</h2>
+  <ul>
+    <li>PoIP Treasury Total: £10,000</li>
+    <li>- £2,000 Staker Pool (short-term yield)</li>
+    <li>- £8,000 Core Fund (long-term protocol yield)</li>
+  </ul>
+
+  <h2>Impact Flow</h2>
+  <p>Yield is collected from both pools. When enough yield is available, the next verified bounty in the impact queue is funded. Proof is published for all to see.</p>
 
 </body>
 </html>
