--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
   <div class="container">
     <h1>Welcome to the Proof of Impact Protocol</h1>
     <p>Select a live module below to explore the system in action:</p>
+
     <a href="stake.html" class="button">Stake Simulation</a>
     <a href="yield.html" class="button">Treasury Yield Simulation</a>
-    <a href="proofs/001.png" class="button" target="_blank">View Live Bounty Proof #001</a>
-    <a href="proofs/002.png" class="button" target="_blank">View Live Bounty Proof #002</a>
+    <a href="proofs/Proof-001.png" class="button" target="_blank">View Live Bounty Proof #001</a>
+    <a href="proofs/Proof-002.png" class="button" target="_blank">View Live Bounty Proof #002</a>
     <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit" class="button" target="_blank">View Live Whitepaper (Google Docs)</a>
   </div>
 </body>
