--- a/index.html
+++ b/index.html
@@ -6,61 +6,39 @@
   <title>Proof of Impact Protocol</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #ffffff;
-      margin: 0;
-      padding: 40px 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .container {
-      max-width: 480px;
-      width: 100%;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(8px);
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #f0f4f8;
       text-align: center;
     }
     h1 {
       font-size: 24px;
-      margin-bottom: 20px;
-      color: #00d4ff;
     }
-    p {
-      margin-bottom: 25px;
-      font-size: 14px;
-    }
-    a.button {
+    a {
       display: block;
-      background-color: #00d4ff;
-      color: #000;
-      text-decoration: none;
+      margin: 15px 0;
       padding: 12px;
-      border-radius: 8px;
-      margin: 10px 0;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
+      background-color: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 16px;
     }
-    a.button:hover {
-      background-color: #00aacc;
+    a:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to the Proof of Impact Protocol</h1>
-    <p>Select a live module below to explore the system in action:</p>
+  <h1>Welcome to the Proof of Impact Protocol</h1>
+  <p>Select a live module below to explore the system in action:</p>
 
-    <a href="stake.html" class="button">Stake Simulation</a>
-    <a href="yield.html" class="button">Treasury Yield Simulation</a>
-    <a href="proofs/Proof-001.png" class="button" target="_blank">View Live Bounty Proof #001</a>
-    <a href="proofs/Proof-002.png" class="button" target="_blank">View Live Bounty Proof #002</a>
-    <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit" class="button" target="_blank">View Live Whitepaper (Google Docs)</a>
-  </div>
+  <a href="stake.html">Stake Simulation</a>
+  <a href="yield.html">Treasury Yield Simulation</a>
+  <a href="Proof-001.png">View Live Bounty Proof #001</a>
+  <a href="Proof-002.png">View Live Bounty Proof #002</a>
+  <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper (Google Docs)</a>
 </body>
 </html>
