--- a/index.html
+++ b/index.html
@@ -3,42 +3,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol</title>
+  <title>Proof of Impact Protocol (PoIP)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
+      max-width: 800px;
       margin: 40px auto;
       padding: 20px;
-      background: #f0f4f8;
+      background: #f4f4f4;
+      color: #222;
+      line-height: 1.6;
+    }
+    h1, h2 {
       text-align: center;
     }
-    h1 {
-      font-size: 24px;
-    }
-    a {
+    .button {
       display: block;
-      margin: 15px 0;
-      padding: 12px;
-      background-color: #007BFF;
+      margin: 15px auto;
+      padding: 15px 25px;
+      background: #007BFF;
       color: white;
+      text-align: center;
       text-decoration: none;
+      font-size: 18px;
       border-radius: 6px;
-      font-size: 16px;
+      width: 90%;
+      max-width: 300px;
     }
-    a:hover {
-      background-color: #0056b3;
+    .button:hover {
+      background: #0056b3;
+    }
+    .image-section {
+      margin-top: 50px;
+      text-align: center;
+    }
+    .image-section img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to the Proof of Impact Protocol</h1>
-  <p>Select a live module below to explore the system in action:</p>
 
-  <a href="stake.html">Stake Simulation</a>
-  <a href="yield.html">Treasury Yield Simulation</a>
-  <a href="Proof-001.png">View Live Bounty Proof #001</a>
-  <a href="Proof-002.png">View Live Bounty Proof #002</a>
-  <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper (Google Docs)</a>
+  <h1>Proof of Impact Protocol (PoIP)</h1>
+  <p style="text-align: center;">
+    A self-sustaining, yield-powered system for global aid and innovation — with public proof and no donations required.
+  </p>
+
+  <a class="button" href="stake.html">Staking Simulation</a>
+  <a class="button" href="yield.html">Treasury Yield Simulation</a>
+  <a class="button" href="bounty001.html">Bounty Proof #001</a>
+  <a class="button" href="bounty002.html">Bounty Proof #002</a>
+  <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk">View Full Whitepaper</a>
+
+  <div class="image-section">
+    <h2>Explore the PoIP One-Pager</h2>
+    <img src="A_webpage_for_the_Proof_of_Impact_Protocol_(PoIP)_.png" alt="PoIP One-Pager">
+  </div>
+
 </body>
 </html>
