--- a/stake.html
+++ b/stake.html
@@ -1,109 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PoIP Staking Simulation</title>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #f8f9fa;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-    }
-    input, select, button {
-      padding: 10px;
-      margin-top: 10px;
-      width: 100%;
-      font-size: 16px;
-    }
-    .result {
-      margin-top: 20px;
-      padding: 15px;
-      background: #e0ffe0;
-      border: 1px solid #b3ffb3;
-      display: none;
-    }
-    .progress {
-      margin-top: 15px;
-      height: 25px;
-      background: #ccc;
-      border-radius: 5px;
-      overflow: hidden;
-    }
-    .progress-bar {
-      height: 100%;
-      background: #28a745;
-      width: 0%;
-      text-align: center;
-      color: white;
-      font-weight: bold;
-    }
+    body { font-family: sans-serif; padding: 20px; text-align: center; }
+    button { padding: 10px 20px; font-size: 16px; }
+    input { padding: 10px; font-size: 16px; width: 100px; text-align: center; }
   </style>
 </head>
 <body>
+  <h1>Stake Simulation – Sepolia Testnet</h1>
+  <p>Connect your MetaMask wallet and simulate staking on Sepolia.</p>
 
-  <h2>PoIP Staking Simulation</h2>
-  <p><strong>Bounty:</strong> Mobile Top-Up for Student in Ghana</p>
-  <p><strong>Goal:</strong> £100</p>
+  <button onclick="connectWallet()">Connect Wallet</button>
+  <p id="wallet-address"></p>
 
-  <form id="stakeForm">
-    <input type="text" id="name" placeholder="Your Name or Wallet Address" required />
-    <input type="number" id="amount" placeholder="Amount to Stake (£)" required min="1" />
-    <button type="submit">Stake Now</button>
-  </form>
-
-  <div class="progress">
-    <div class="progress-bar" id="progressBar">£0</div>
-  </div>
-
-  <div class="result" id="resultBox"></div>
+  <p>Enter amount to stake (ETH):</p>
+  <input type="number" id="stakeAmount" placeholder="0.01" step="0.01" min="0">
+  <br><br>
+  <button onclick="stake()">Simulate Stake</button>
+  <p id="result"></p>
 
   <script>
-    let totalStaked = 0;
-    const goal = 100;
-    const resultBox = document.getElementById('resultBox');
-    const progressBar = document.getElementById('progressBar');
-    const form = document.getElementById('stakeForm');
+    let provider, signer;
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-
-      const name = document.getElementById('name').value.trim();
-      const amount = parseFloat(document.getElementById('amount').value);
-
-      if (!name || amount <= 0) return;
-
-      totalStaked += amount;
-
-      const progressPercent = Math.min((totalStaked / goal) * 100, 100);
-      progressBar.style.width = progressPercent + "%";
-      progressBar.textContent = `£${Math.min(totalStaked, goal).toFixed(2)}`;
-
-      if (totalStaked >= goal) {
-        resultBox.innerHTML = `
-          ✅ <strong>Bounty Fulfilled!</strong><br/>
-          £${goal} raised for the student top-up.<br/>
-          ${name}, you earned <strong>${(amount * 0.025).toFixed(2)} $GROW</strong>.
-        `;
-        resultBox.style.display = 'block';
+    async function connectWallet() {
+      if (window.ethereum) {
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        provider = new ethers.providers.Web3Provider(window.ethereum);
+        signer = await provider.getSigner();
+        const address = await signer.getAddress();
+        document.getElementById("wallet-address").innerText = `Connected: ${address}`;
       } else {
-        resultBox.innerHTML = `
-          ✅ Thanks, ${name}! You staked £${amount.toFixed(2)}.<br/>
-          Total progress: £${totalStaked.toFixed(2)} of £${goal}<br/>
-          You earned <strong>${(amount * 0.025).toFixed(2)} $GROW</strong> (simulated).
-        `;
-        resultBox.style.display = 'block';
+        alert("Please install MetaMask.");
+      }
+    }
+
+    async function stake() {
+      const amount = document.getElementById("stakeAmount").value;
+      if (!amount || amount <= 0) {
+        document.getElementById("result").innerText = "Enter a valid amount.";
+        return;
       }
 
-      form.reset();
-    });
+      document.getElementById("result").innerText = "Simulating transaction...";
+
+      try {
+        const tx = await signer.sendTransaction({
+          to: signer.getAddress(), // simulate staking to self
+          value: ethers.utils.parseEther(amount)
+        });
+
+        document.getElementById("result").innerText = `Simulated! TX Hash: ${tx.hash}`;
+      } catch (err) {
+        document.getElementById("result").innerText = `Error: ${err.message}`;
+      }
+    }
   </script>
 </body>
 </html>
