--- a/index.html
+++ b/index.html
@@ -3,87 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol</title>
+  <title>Proof of Impact Protocol (PoIP)</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f7f9fc;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background: linear-gradient(135deg, #0d1f3c, #152f52);
-      color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
       text-align: center;
-      margin-bottom: 10px;
-      font-size: 26px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-top: 0;
-      font-size: 18px;
-      font-weight: normal;
-    }
-
-    p {
-      font-size: 15px;
-      line-height: 1.6;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    h3 {
-      text-align: center;
-      margin-bottom: 12px;
-    }
-
-    ul {
-      list-style: none;
+      background: #f9f9f9;
+      margin: 0;
       padding: 0;
-      text-align: center;
-      margin-bottom: 30px;
     }
-
-    ul li {
-      margin: 8px 0;
+    .container {
+      max-width: 600px;
+      margin: 60px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
     }
-
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
-
-    .button-container a {
-      text-decoration: none;
-      padding: 12px 24px;
-      background-color: #007bff;
-      color: #ffffff;
+    p {
+      color: #333;
+      line-height: 1.5;
+    }
+    .button {
+      display: inline-block;
+      padding: 12px 20px;
+      margin: 10px;
+      background: #007bff;
+      color: white;
+      border: none;
       border-radius: 6px;
-      font-weight: bold;
-      width: 80%;
-      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
     }
-
-    .button-container a:hover {
-      background-color: #0056b3;
-    }
-
-    .footer {
+    footer {
       margin-top: 30px;
-      text-align: center;
-      font-size: 13px;
-      color: #cccccc;
+      font-size: 12px;
+      color: #777;
     }
   </style>
 </head>
@@ -95,24 +54,22 @@
       Proof of Impact (PoIP) is a decentralized protocol that incentivizes positive social outcomes through impact bounties.
     </p>
     <p>
-      Stakeholders make a difference by staking cryptocurrency, helping to grow the PoIP Treasury. The yield from the Treasury is used to fund real-world impact bounties, promoting and tracking verified proof of impact.
+      Stakeholders make a difference by staking cryptocurrency to grow the PoIP Treasury. Yield is used to fund real-world impact, tracked as verified proof of impact.
     </p>
+
     <h3>Why Stake?</h3>
-    <ul>
-      <li>• Drive Positive Change</li>
-      <li>• Earn Rewards</li>
+    <ul style="text-align: left;">
+      <li><strong>Drive Positive Change:</strong> Support global impact projects.</li>
+      <li><strong>Earn Rewards:</strong> Receive $GROW tokens as non-speculative recognition.</li>
     </ul>
-    <p>
-      $GROW tokens are non-speculative rewards given to stakeholders
-    </p>
-    <div class="button-container">
-      <a href="stake.html">Stake Simulation</a>
-      <a href="yield.html">Treasury Yield Simulation</a>
-      <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Live Whitepaper</a>
-    </div>
-    <div class="footer">
-      © 2025 PoIP. Licensed under the GNU General Public License
-    </div>
+
+    <a class="button" href="stake.html">Try Staking Simulation</a>
+    <a class="button" href="yield.html">Treasury Yield Simulation</a>
+    <a class="button" href="https://docs.google.com/document/d/1n2LXO1uRC_yQ9AxVPdjZ_s41-QM8cZobAb5ljT_WvKw" target="_blank">View Live Whitepaper</a>
+
+    <footer>
+      © 2025 PoIP. Licensed under the GNU General Public License.
+    </footer>
   </div>
 </body>
 </html>
