--- a/Proof-003.html
+++ b/Proof-003.html
@@ -2,16 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bounty Proof #003</title>
+  <title>Proof of Impact – Proof #003</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      background-color: #ffffff;
+      color: #111;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+    }
+    h1 {
+      font-size: 26px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+    a {
+      color: #007bff;
+      word-break: break-all;
+    }
+    .hash {
+      background: #f3f3f3;
+      padding: 10px;
+      border-radius: 5px;
+      font-family: monospace;
+    }
+  </style>
 </head>
 <body>
-  <h2>Proof of Impact – Bounty #003</h2>
-  <p><strong>Description:</strong> £100 sent to a verified clean water provider in Kenya.</p>
-  <p><strong>Impact Type:</strong> Infrastructure Aid</p>
-  <p><strong>Amount:</strong> £100 equivalent</p>
-  <p><strong>Date:</strong> 19 May 2025</p>
-  <p><strong>Staked Threshold Reached:</strong> Yes</p>
-  <p><strong>On-Chain Proof:</strong> <a href="https://sepolia.etherscan.io/tx/0xc6d7343ce21d1ad0492d77704d21b4e72efe735da1f869bf79a0ec553d38460a" target="_blank">View Transaction</a></p>
-  <p><strong>Status:</strong> Complete</p>
+  <div class="container">
+    <h1>Proof of Impact #003</h1>
+    <p>This transaction represents a successful stake simulation on the Sepolia testnet using the Proof of Impact protocol.</p>
+
+    <p><strong>Transaction Hash:</strong></p>
+    <div class="hash">0xc6d7343ce21d1ad0492d77704d21b4e72efe735da1f869bf79a0ec55575258da</div>
+
+    <p><strong>View on Sepolia Etherscan:</strong><br>
+      <a href="https://sepolia.etherscan.io/tx/0xc6d7343ce21d1ad0492d77704d21b4e72efe735da1f869bf79a0ec55575258da" target="_blank">
+        https://sepolia.etherscan.io/tx/0xc6d7343ce21d1ad0492d77704d21b4e72efe735da1f869bf79a0ec55575258da
+      </a>
+    </p>
+
+    <p><strong>Network:</strong> Sepolia Testnet</p>
+    <p><strong>Amount:</strong> 0.01 ETH</p>
+  </div>
 </body>
 </html>
