--- a/index.html
+++ b/index.html
@@ -1,75 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol (PoIP)</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f9f9f9;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 600px;
-      margin: 60px auto;
-      padding: 20px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    p {
-      color: #333;
-      line-height: 1.5;
-    }
-    .button {
-      display: inline-block;
-      padding: 12px 20px;
-      margin: 10px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    footer {
-      margin-top: 30px;
-      font-size: 12px;
-      color: #777;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Proof of Impact Protocol</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 40px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 16px;
+            color: #555;
+            max-width: 600px;
+            margin: 0 auto 30px;
+        }
+        .button {
+            display: inline-block;
+            margin: 10px;
+            padding: 12px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 6px;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
     <h1>Proof of Impact Protocol</h1>
-    <h2>Stake to Make a Difference</h2>
-    <p>
-      Proof of Impact (PoIP) is a decentralized protocol that incentivizes positive social outcomes through impact bounties.
-    </p>
-    <p>
-      Stakeholders make a difference by staking cryptocurrency to grow the PoIP Treasury. Yield is used to fund real-world impact, tracked as verified proof of impact.
-    </p>
-
-    <h3>Why Stake?</h3>
-    <ul style="text-align: left;">
-      <li><strong>Drive Positive Change:</strong> Support global impact projects.</li>
-      <li><strong>Earn Rewards:</strong> Receive $GROW tokens as non-speculative recognition.</li>
-    </ul>
-
-    <a class="button" href="stake.html">Try Staking Simulation</a>
-    <a class="button" href="yield.html">Treasury Yield Simulation</a>
-    <a class="button" href="https://docs.google.com/document/d/1n2LXO1uRC_yQ9AxVPdjZ_s41-QM8cZobAb5ljT_WvKw" target="_blank">View Live Whitepaper</a>
-
-    <footer>
-      © 2025 PoIP. Licensed under the GNU General Public License.
-    </footer>
-  </div>
+    <p>Welcome to the PoIP simulation site. Explore how staking, yield growth, and bounty funding work together in this on-chain impact model.</p>
+    <a class="button" href="stake.html">Stake Simulation</a>
+    <a class="button" href="yield.html">Treasury Yield</a>
+    <a class="button" href="bounties.html">View Bounties</a>
+    <a class="button" href="https://docs.google.com/document/d/1avZ_tsyX0rBXp0aErEyBDrK1YfDZfwfKXW_EhjkKpDM/edit" target="_blank">View Whitepaper</a>
 </body>
 </html>
